{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 40,
  "lineage": "a0d5b9ca-1f89-30fa-2beb-74ec0b48a9cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047bc373bf92c328c",
            "arn": "arn:aws:ec2:us-east-1:342597974367:elastic-ip/eipalloc-047bc373bf92c328c",
            "association_id": "eipassoc-0d640997e2dd6a286",
            "domain": "vpc",
            "id": "eipalloc-047bc373bf92c328c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0312c2c2c182fb146",
            "private_dns": "ip-10-0-1-189.ec2.internal",
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-54-147-134-131.compute-1.amazonaws.com",
            "public_ip": "54.147.134.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-nat-eip-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-nat-eip-synth101000818",
              "Project": "ecommerce"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:internet-gateway/igw-0c32da520d37b96df",
            "id": "igw-0c32da520d37b96df",
            "owner_id": "342597974367",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-igw-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-igw-synth101000818",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/ecommerce-alb-synth101000818/cfd043f8613edb9c",
            "arn_suffix": "app/ecommerce-alb-synth101000818/cfd043f8613edb9c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-alb-synth101000818-1097548884.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/ecommerce-alb-synth101000818/cfd043f8613edb9c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-alb-synth101000818",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0594a2780bff0bc99"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-020aea4eaedd6996e"
              },
              {
                "subnet_id": "subnet-06e1852af86919c38"
              }
            ],
            "subnets": [
              "subnet-020aea4eaedd6996e",
              "subnet-06e1852af86919c38"
            ],
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-alb-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-alb-synth101000818",
              "Project": "ecommerce"
            },
            "vpc_id": "vpc-01ec52912b8090fa8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener/app/ecommerce-alb-synth101000818/cfd043f8613edb9c/4c0b2ad22fd33a18",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/ecom-s20251104121028457000000005/765f8deff5a42a9b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:listener/app/ecommerce-alb-synth101000818/cfd043f8613edb9c/4c0b2ad22fd33a18",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/ecommerce-alb-synth101000818/cfd043f8613edb9c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Project": "ecommerce"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/ecom-s20251104121028457000000005/765f8deff5a42a9b",
            "arn_suffix": "targetgroup/ecom-s20251104121028457000000005/765f8deff5a42a9b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:342597974367:targetgroup/ecom-s20251104121028457000000005/765f8deff5a42a9b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:342597974367:loadbalancer/app/ecommerce-alb-synth101000818/cfd043f8613edb9c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecom-s20251104121028457000000005",
            "name_prefix": "ecom-s",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-tg-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-tg-synth101000818",
              "Project": "ecommerce"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-047bc373bf92c328c",
            "association_id": "eipassoc-0d640997e2dd6a286",
            "connectivity_type": "public",
            "id": "nat-057353762c9ee0141",
            "network_interface_id": "eni-0312c2c2c182fb146",
            "private_ip": "10.0.1.189",
            "public_ip": "54.147.134.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e1852af86919c38",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-nat-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-nat-synth101000818",
              "Project": "ecommerce"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:route-table/rtb-004f6ff007e1dfa03",
            "id": "rtb-004f6ff007e1dfa03",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057353762c9ee0141",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-private-rt-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-private-rt-synth101000818",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:route-table/rtb-09c82523de0ebda16",
            "id": "rtb-09c82523de0ebda16",
            "owner_id": "342597974367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c32da520d37b96df",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-rt-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-rt-synth101000818",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b524ee50998b4b3",
            "route_table_id": "rtb-004f6ff007e1dfa03",
            "subnet_id": "subnet-0f14ee8f7ac23913d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a1c26a85c849ef",
            "route_table_id": "rtb-004f6ff007e1dfa03",
            "subnet_id": "subnet-0c69d53ab011b2593"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c54ccd5678747b97",
            "route_table_id": "rtb-09c82523de0ebda16",
            "subnet_id": "subnet-06e1852af86919c38"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031c836c0f0d3bbb8",
            "route_table_id": "rtb-09c82523de0ebda16",
            "subnet_id": "subnet-020aea4eaedd6996e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0594a2780bff0bc99",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0594a2780bff0bc99",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecommerce-alb-synth101000818-20251104121028456800000004",
            "name_prefix": "ecommerce-alb-synth101000818-",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-alb-sg-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-alb-sg-synth101000818",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0a4c18a95f17b92e5",
            "description": "Security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4c18a95f17b92e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0594a2780bff0bc99"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecommerce-ec2-synth101000818-20251104121034033000000008",
            "name_prefix": "ecommerce-ec2-synth101000818-",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-ec2-sg-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-ec2-sg-synth101000818",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:security-group/sg-0c5acd8d87f579670",
            "description": "Security group for RDS MySQL",
            "egress": [],
            "id": "sg-0c5acd8d87f579670",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a4c18a95f17b92e5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecommerce-rds-synth101000818-20251104121038636600000009",
            "name_prefix": "ecommerce-rds-synth101000818-",
            "owner_id": "342597974367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-rds-sg-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-rds-sg-synth101000818",
              "Project": "ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0f14ee8f7ac23913d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f14ee8f7ac23913d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-private-subnet-1-synth101000818",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-private-subnet-1-synth101000818",
              "Project": "ecommerce",
              "Type": "private"
            },
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-0c69d53ab011b2593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c69d53ab011b2593",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-private-subnet-2-synth101000818",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-private-subnet-2-synth101000818",
              "Project": "ecommerce",
              "Type": "private"
            },
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-06e1852af86919c38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e1852af86919c38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-subnet-1-synth101000818",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-subnet-1-synth101000818",
              "Project": "ecommerce",
              "Type": "public"
            },
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:subnet/subnet-020aea4eaedd6996e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020aea4eaedd6996e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342597974367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-subnet-2-synth101000818",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-public-subnet-2-synth101000818",
              "Project": "ecommerce",
              "Type": "public"
            },
            "vpc_id": "vpc-01ec52912b8090fa8"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342597974367:vpc/vpc-01ec52912b8090fa8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03735496fcc7a91e0",
            "default_route_table_id": "rtb-0cc5ddf891827f22d",
            "default_security_group_id": "sg-04ea7c22db1b3a308",
            "dhcp_options_id": "dopt-096ea572b45cebc14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ec52912b8090fa8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc5ddf891827f22d",
            "owner_id": "342597974367",
            "tags": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-vpc-synth101000818"
            },
            "tags_all": {
              "Environment": "-synth101000818",
              "ManagedBy": "Terraform",
              "Name": "ecommerce-vpc-synth101000818",
              "Project": "ecommerce"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}